refactor: simplify stream collection by using .toList() instead of Collectors.toList()